--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- Home Section -->
       <section
         id="home"
-        class="bg-cover bg-center py-16 sm:py-24 md:py-32 lg:py-40 px-6 relative bg-gray-100 bg-cover bg-center bg-no-repeat bg-fixed"
+        class="bg-cover bg-no-repeat py-16 sm:py-24 md:py-32 lg:py-40 px-6 relative bg-gray-100"
         style="
           background-image: url('https://images.unsplash.com/photo-1602537675897-1285bfbcd014?auto=format&fit=crop&w=1920&q=80');
         ">
